# rust-sdk

./: .cursorrules  .gitignore  Cargo.toml  README.md
crates/mcp-client/: Cargo.toml  README.md
crates/mcp-client/src/: client.rs  service.rs
crates/mcp-client/src/transport/: mod.rs  sse.rs  stdio.rs
crates/mcp-core/: Cargo.toml  README.md
crates/mcp-macros/: Cargo.toml  README.md
crates/mcp-server/: Cargo.toml  README.md
crates/mcp-server/src/: errors.rs  lib.rs  router.rs
examples/: README.md
examples/clients/: Cargo.toml
examples/clients/src/: clients.rs  sse.rs  stdio.rs  stdio_integration.rs
examples/macros/: Cargo.toml
examples/macros/src/: calculator.rs
examples/servers/: Cargo.toml
examples/servers/src/: axum.rs  counter_server.rs
examples/servers/src/common/: counter.rs
