[workspace]
members = [
    "crates/*",
    "examples/clients",
    "examples/servers",
    "examples/macros",
]
resolver = "2"

[workspace.dependencies]
mcp-core-fishcode2025 = { path = "./crates/mcp-core" }
mcp-server-fishcode2025 = { path = "./crates/mcp-server" }
mcp-client-fishcode2025 = { path = "./crates/mcp-client" }
mcp-macros-fishcode2025 = { path = "./crates/mcp-macros" }

[workspace.package]
version = "0.1.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/fishcode2025/mcp-rust-sdk"
description = "Rust SDK for the Model Context Protocol"
