[package]
name = "mcp-macros-fishcode2025"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "Macros for the Model Context Protocol SDK"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mcp-core-fishcode2025 = { version = "0.1.0", path = "../mcp-core" }
async-trait = "0.1"
schemars = "0.8"
convert_case = "0.6.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde_json = "1.0"
schemars = "0.8"
